# py-play

./: .gitignore  README.md  pyproject.toml
data/: data.json
src/pydantic/: example.py
