[project]
name = "py-play"
version = "0.1.0"
description = "Play area for random things related to Python"
authors = [
    {name = "tmaskibail",email = "59851752+tmaskibail@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src/fastapi/*.py" },
    { include = "src/pydantic/*.py" },
]

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"

